<resources>
    <string name="app_name">Merchant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_newpin">Change PIN code</string>
    <string name="action_pincode">PIN code</string>
    <string name="hello_world">Hello world!</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate us</string>
    <string name="email_chooser">Send e-mail...</string>
    <string name="about">Blockchain Merchant %1$s\n©%2$s Blockchain.info</string>
    <string name="wallet_download">Free Bitcoin Wallet</string>

    <string name="tab_settings">Settings</string>
    <string name="tab_payment">Payment</string>
    <string name="tab_history">History</string>

    <string name="receive_coins_fragment_name">Merchant Name</string>
    <string name="receive_coins_fragment_merchant_xpub_hint">Your Public Key</string>
    <string name="receive_coins_fragment_receiving_address_error">Invalid address</string>
    <string name="receive_coins_fragment_default_currency_hint">Default currency</string>
    <string name="receive_coins_fragment_other_currency">Other currency code (3 letter code, ex.: MXP)</string>
    <string name="receive_coins_activity_title">Send Bitcoins</string>
    <string name="receive_coins_install_qr_scanner_msg">Please install ZXing QR-code scanner or Goggles!</string>
    <string name="receive_coins_uri_parse_error_title">Invalid Bitcoin URI</string>
    <string name="receive_coins_parse_address_error_msg">Got invalid bitcoin address!\n(Mixing up Testnet/Prodnet?)</string>
    <string name="receive_coins_fragment_push_notifications">Push Notifications</string>
    <string name="receive_coins_fragment_email_receipts">E-mail receipts</string>
    <string name="use_btc">Enter price in Bitcoins (BTC)</string>
    <string name="payment_note">Description (optional)...</string>
    <string name="payment_clear">CLEAR</string>
    <string name="payment_new">Start</string>
    <string name="payment_ready">Confirm Payment</string>
    <string name="payment_executed">Payment Executed</string>
    <string name="no_data">No data</string>
    <string name="content_description">Thank you. Hope to see you soon.</string>
    <string name="delete_rec">Are you sure you want to delete this payment entry?</string>
    <string name="invalid_btc_address">Please enter a valid Bitcoin wallet address.</string>
    <string name="pin_code_prompt1">Create a 6-digit PIN code</string>
    <string name="pin_code_prompt2">Repeat PIN code</string>
    <string name="pin_code_prompt3">Enter your 6-digit PIN code</string>
    <string name="marquee_start">Payment received from</string>
    <string name="notification_end">BTC received</string>
    <string name="generating_qr">Generating QR code...</string>
    <string name="no_exchange_rate">Blockchain Merchant has not determined the exchange rate for your selected currency. Please check your Internet connection and try again.</string>

    <string name="pin_code_create_error">Enter two matching 4-digit PIN codes</string>
    <string name="pin_code_enter_error">PIN code incorrect</string>
    <string name="camera_unavailable">Camera unavailable</string>

    <string name="prompt_yes">Yes</string>
    <string name="prompt_no">No</string>
    <string name="prompt_ok">OK</string>
    <string name="prompt_ko">CANCEL</string>
    <string name="prompt_save">SAVE</string>

    <!-- <string name="bitcoin_currency_symbol">&#xf15a;</string> -->
    <string name="bitcoin_currency_symbol">BTC</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="create_pin">Create Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="unrecognized_xpub">Unrecognized public key format</string>
    <string name="payment_received">Payment Received. Thank you.</string>
    <string name="unable_to_generate_address">An address cannot be generated at this time. Please check your installation and try again.</string>
    <string name="btc_limit_reached">Bitcoin limit reached.</string>

    <string name="no_valid_receiver">Please configure your receiving address.</string>
    <string name="invalid_amount">Invalid amount.</string>

    <string name="new_version_message">\u2022 Beautiful new design\n\n\u2022 Faster and easier input\n\n\u2022 Stability fixes\n\n\u2022 Direct payments to any bitcoin address\n\n\u2022 Privacy support with BIP44 XPUBS</string>

    <string name="insufficient_payment">Insufficient payment received.</string>
    <string name="re_payment_requested">Requested:</string>
    <string name="re_payment_received">Received:</string>
    <string name="insufficient_payment_continue">Update QR code for remaining amount due?</string>

    <string name="settings_saved">Settings saved</string>

    <string name="dialog_continue">Continue</string>
    <string name="ssl_hostname_invalid">We are unable to validate the hostname of the SSL certificate. This might indicate malicious activity. Please verify your network connection and device before continuing.</string>
    <string name="ssl_pinning_invalid">SSL certificate pinning has failed. This might indicate malicious activity. Please verify your network connection and device before continuing.</string>

    <string name="off">Off</string>
    <string name="on">On</string>

    <string name="options_cat_settings">Settings</string>
    <string name="options_receive">Receiving payments</string>
    <string name="options_merchant_name">Merchant name</string>
    <string name="options_local_currency">Local currency</string>
    <string name="options_pin_code">PIN code</string>
    <string name="options_payment_address">Payment address</string>
    <string name="options_forget_payment_address">Forget payment address</string>
    <string name="options_forget_payment_address_text">If you forget this payment address you will not be able to accept bitcoin payments until you add a new one.</string>
    <string name="options_receiving_payments">Receiving payments</string>
    <string name="options_new_payment_address">New payment address</string>
    <string name="options_new_payment_address_text">A payment address is the extended public key (xPub) of your wallet or a bitcoin address that you control.\n\nUsing the extended public key from your Blockchain Wallet is the best way to set your payment address because it increases your privacy while making accounting easier.</string>
    <string name="options_new_payment_address_text2">If you do not have a Blockchain Bitcoin wallet you can create one for free by visiting https://blockchain.info/wallet</string>
    <string name="options_add_payment_address">Add payment address</string>
    <string name="options_add_payment_address_text">Login to Blockchain Wallet at http://blockchain.info/wallet-beta. Open Accounts &amp; Addresses in settings. Select Show xPub. Paste or scan the code displayed.\n\nIf you don\'t have an Extended Public Key you can paste or scan your bitcoin address.</string>

    <string name="scan">Scan</string>
    <string name="paste">Paste</string>

    <string name="obligatory_receiver">You must provide a receiving xPub or bitcoin address.</string>

    <string name="please_create_pin">Before proceding, please create a 4-digit PIN code in order to protect your Settings.</string>
    <string name="overpaid_amount">The amount received is higher than expected.</string>



    <string name="Merchant_lable">Merchant</string>
    <string name="merchant_note">PLEASE NOTE THAT WE DO NOT HOLD ANY BITCOIN ON THIS DEVICE</string>
    <string name="transaction_total">TOTAL:</string>
    <string name="transaction_tip">TIP:</string>
    <string name="transaction_subtotal">SUB-TOTAL:</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="pay">PAY</string>

    <string name="business_name">Business Name</string>
    <string name="business_address">Business Address</string>
    <string name="business_city">Business City</string>
    <string name="business_province">Business Province</string>
    <string name="business_zip">Business Zipcode</string>
    <string name="phone">Phone</string>
    <string name="note">Note</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="currency">Currency</string>
    <string name="pin">Pin</string>

    <string-array name="atm_titles">
        <item>Chomedey INN</item>
        <item>Dépanneur 7 Jours Mirage</item>
        <item>Dépanneur Servo Soir</item>
        <item>Gaiters</item>
        <item>New Mondo</item>
    </string-array>
    
    <string-array name="atm_address">
        <item>590 Boul Curé-Labelle, Laval, QC, H7V 2T6</item>
        <item>836 Boul Provencher, Brossard, QC, J4W 1Y6</item>
        <item>3893 Rue Ontario E, Montréal, QC, H1W 1S7</item>
        <item>978 Boul Curé-Labelle, Laval, QC H7V 2V5</item>
        <item>9258 Boulevard de l`Acadie, Montréal, QC, H4N 3C5</item>
    </string-array>
    
    <string-array name="atm_operating">
        <item>Hours	24H</item>
        <item>Hours	8AM to 11PM</item>
        <item>Hours	24H</item>
        <item>Hours	8AM to 3AM</item>
        <item>Hours	11AM to 3AM</item>
    </string-array>
    
    <string-array name="atm_tag">
        <item>Buy &amp; Sell</item>
        <item>Buy &amp; Sell</item>
        <item>Buy &amp; Sell</item>
        <item>Buy &amp; Sell</item>
        <item>Buy &amp; Sell</item>
    </string-array>

    <string-array name="currencies">
        <item>CAD</item>
        <item>USD</item>
        <item>BTC</item>
    </string-array>

    <string-array name="contacts">
        <item>Website</item>
        <item>Email</item>
        <item>Phone</item>
        <item>Facebook</item>
        <item>Twitter</item>
        <item>Google</item>
        <item>Youtube</item>
    </string-array>

</resources>
