<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:id="@+id/setting_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:textAlignment="center"
        android:hint="@string/business_name"
        android:inputType="text"
        android:padding="5dp"/>

    <EditText
    android:id="@+id/setting_address"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_edittext"
    android:textAlignment="center"
    android:hint="@string/business_address"
    android:padding="5dp"
        android:inputType="text"
    android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/setting_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:textAlignment="center"
        android:hint="@string/business_city"
        android:padding="5dp"
        android:inputType="textAutoComplete"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/setting_province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:textAlignment="center"
        android:hint="@string/business_province"
        android:padding="5dp"
        android:inputType="text"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/setting_zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:textAlignment="center"
        android:hint="@string/business_zip"
        android:padding="5dp"
        android:inputType="number"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/setting_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:textAlignment="center"
        android:hint="@string/phone"
        android:padding="5dp"
        android:inputType="phone"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/setting_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:textAlignment="center"
        android:hint="@string/note"
        android:padding="5dp"
        android:inputType="text"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <EditText
            android:id="@+id/setting_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/setting_camera"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_edittext"
            android:hint="@string/wallet_address"
            android:textAlignment="center"
            android:padding="5dp" />

        <ImageView
            android:id="@+id/setting_camera"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/ic_qr"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/setting_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:textAlignment="center"
        android:hint="@string/currency"
        android:padding="5dp"
        android:focusableInTouchMode="false"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/setting_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:textAlignment="center"
        android:hint="@string/pin"
        android:padding="5dp"
        android:focusableInTouchMode="false"
        android:layout_marginTop="10dp"/>

</LinearLayout>